force-app/main/default/objects/Customer_Interaction__c/Customer_Interaction__c.object-meta.xml
<CustomObject>
    <label>Customer Interaction</label>
    <pluralLabel>Customer Interactions</pluralLabel>
    <description>Object used to track WhatsApp interactions and conversation history for multilingual customer service within the banking system.</description>
    <nameField>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
        <displayFormat>INT-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>