force-app/main/default/objects/Customer_Interaction__c/fields/Agent_Response__c.field-meta.xml
<CustomField>
    <fullName>Agent_Response__c</fullName>
    <label>Agent Response</label>
    <description>The Agentforce response sent back to the customer</description>
    <inlineHelpText>Contains the Banking Sahayak agent's response in the customer's preferred language</inlineHelpText>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>