force-app/main/default/objects/Customer_Interaction__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <description>Link to the customer account for this interaction</description>
    <inlineHelpText>Select the customer who initiated this interaction</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Interactions</relationshipLabel>
    <relationshipName>Customer_Interactions</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>