force-app/main/default/objects/Customer_Interaction__c/fields/Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Date__c</fullName>
    <label>Interaction Date</label>
    <description>The date and time when the customer interaction occurred</description>
    <inlineHelpText>Automatically populated with the timestamp of the WhatsApp message</inlineHelpText>
    <type>DateTime</type>
    <required>true</required>
</CustomField>