force-app/main/default/objects/Customer_Interaction__c/fields/Language_Used__c.field-meta.xml
<CustomField>
    <fullName>Language_Used__c</fullName>
    <label>Language Used</label>
    <description>The language detected in the customer's message</description>
    <inlineHelpText>Automatically detected: English, Hindi, or Mixed (Hindi-English)</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
                <default>true</default>
                <label>Mixed (Hindi-English)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>