force-app/main/default/objects/Customer_Interaction__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <label>Message Content</label>
    <description>The actual message text sent by the customer</description>
    <inlineHelpText>Contains the customer's message in their preferred language (Hindi, English, or mixed)</inlineHelpText>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>